# domashka_web_09

./: bs_scraping.py  connect.py  consumer_email.py  consumer_sms.py  find_authors_and_quotes.py  load_data.py  main.py  models.py  producier.py  pyproject.toml
