[tool.poetry]
name = "domashaka-web-08"
version = "0.1.0"
description = ""
authors = ["Vesnani <132687769+Vesnani@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "domashaka_web_08"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
pymongo = "^4.4.1"
redis = "^5.0.0"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^19.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
